# EduHub

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  pyproject.toml
EduHub/: .settings.py.swp  asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_course_major_user_birth_date_cousersections_and_more.py  0003_cousersections_student_alter_user_birth_date.py  0004_remove_cousersections_course_section_and_more.py  0005_rename_cousersections_couserselection.py  0006_remove_course_professor_course_professor.py  0007_rename_couserselection_courseselection.py
traefik/: traefik.yml
